@@ -95,6 +95,9 @@
 - added: `SchemaEntity.clear()` for removing all current definition
 - added: new view engine markup `@{#}` for simulating of root URL
 - added: `String.ROOT()` for replacing `@{#}` markup in strings
+- added: `Number.encrypt(key)` for encrypting number values
+- added: `String.decryptnumber(key)` for decrypting of number values
+- added: `F.config['secret-numbers']` as a hidden secret for encrypting/decrypting values
 
 - updated: (IMPORTANT) NoSQL binary divides files to independent directories for 1000 files per directory
 - updated: `GROUP()` by adding a new argument `url_prefix`
